--- a/SistemaRestaurante/SistemaRestaurante.csproj
+++ b/SistemaRestaurante/SistemaRestaurante.csproj
@@ -65,6 +65,12 @@
     <Compile Include="View\formClientes.Designer.cs">
       <DependentUpon>formClientes.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\formPlatillos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\formPlatillos.Designer.cs">
+      <DependentUpon>formPlatillos.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +91,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\formClientes.resx">
       <DependentUpon>formClientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\formPlatillos.resx">
+      <DependentUpon>formPlatillos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
